--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,10 @@ div#container{
 }
 main{
     grid-area:conteudo;
+    align-content: center;
+}
+#implementar{
+    text-align: center;
 }
 #introducao{
     background-color: var(--cor-secundaria);
@@ -119,7 +123,7 @@ a.linkgithub{
     font-size: 20px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-#curriculo input, #implementar input{
+#curriculo input, #implementar input, textarea{
     border: solid 1px;
     background-color: #dbffffc4;
     font-size: 20px;
@@ -147,13 +151,24 @@ td{
     font-size: 20px;
     text-decoration:overline;
 }
-#svButton{
+#svButton, #resetButton{
     border: solid 2px;
     border-radius: 3px;
     padding: 1px;
     transition: 1s;
     cursor: pointer;
 }
-#svButton:hover{
+.editButton, .delButton{
+    border: solid 1.5px;
+    border-color: black;
+    cursor: pointer;
+}
+#svButton:hover, #resetButton:hover{
     background-color: rgba(0, 0, 0, 0.377);
+}
+.delButton:hover, .editButton:hover{
+    transform: scale(1.1);
+    background-color: #000000;
+    box-shadow: 0 0 10px black;
+    transition: 700ms;
 }
