--- a/styles.css
+++ b/styles.css
@@ -172,3 +172,16 @@ td{
     box-shadow: 0 0 10px black;
     transition: 700ms;
 }
+#menu-start{
+    position: relative;
+    >#menu-edit{
+        position: absolute;
+        text-align: center;
+        place-items: center;
+        padding: 0.5em;
+        border: solid;
+        border-radius: 0.3em;
+        box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
+        > 
+    }
+}
