--- a/styles.css
+++ b/styles.css
@@ -151,6 +151,7 @@ td{
     font-size: 20px;
     text-decoration:overline;
 }
+
 #svButton, #resetButton{
     border: solid 2px;
     border-radius: 3px;
@@ -158,30 +159,43 @@ td{
     transition: 1s;
     cursor: pointer;
 }
+
 .editButton, .delButton{
     border: solid 1.5px;
     border-color: black;
     cursor: pointer;
 }
+
 #svButton:hover, #resetButton:hover{
     background-color: rgba(0, 0, 0, 0.377);
 }
+
 .delButton:hover, .editButton:hover{
     transform: scale(1.1);
     background-color: #000000;
     box-shadow: 0 0 10px black;
     transition: 700ms;
 }
+
 #menu-start{
     position: relative;
-    >#menu-edit{
-        position: absolute;
-        text-align: center;
-        place-items: center;
-        padding: 0.5em;
-        border: solid;
-        border-radius: 0.3em;
-        box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
-        > 
-    }
+}
+
+#menu-edit {
+    display: none;
+    background-color: rgb(131, 131, 131);
+    position: fixed;
+    text-align: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 1em;
+    border: solid;
+    border-radius: 0.3em;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+    z-index: 1000;
+}
+
+#menu-edit.show {
+    display: block;
 }
