--- a/styles.css
+++ b/styles.css
@@ -254,12 +254,11 @@ td{
 
 .textCabecalho {
     width: 100%;
-    height: 100%;
     padding: 8px 16px;
     background-color: #ffc186;
     border-radius: 3px;
     border: 2px solid transparent;
-    transition: all 0.3s ease;
+    transition: all 1s ease;
     font-weight: bold;
     user-select: none;
 }
@@ -270,19 +269,20 @@ td{
     box-shadow: 0 2px 6px rgba(0,0,0,0.1);
 }
 
-.textCabecalho.selected {
-    background-color: #d1eaff;
-    border-color: #3399ff;
-    transform: translateY(4px);
-    box-shadow: 0 4px 10px rgba(51, 153, 255, 0.3);
-}
-
 .linguagemBody {
     grid-area: exp-texto;
-    margin-top: 20px;
     padding: 15px;
     border: 1px solid #ccc;
     border-radius: 8px;
     min-height: 100px;
-    background-color: #fafafa;
+    background-color: #ccc;
+}
+
+.textCabecalho.ativo {
+    background-color: #00000091;
+    color: white;
+    position: relative;
+    top: 5px;
+    margin-top: -5px;
+    box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.2);
 }
